--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -80,7 +80,7 @@
                     </div>
                     <div class="flip_back w-100 flipped-card-text">
                         <p>
-                            Prenu sul bottone in basso
+                            Premi sul bottone in basso
                             per visualizzare le biblioteche
                             che più ti possono interessare.
                         </p>
@@ -239,21 +239,6 @@
                         </div>
                         <!-- Grid column -->
 
-                        <!-- Grid column -->
-                        <div class="col-lg-3 col-md-6 p-1">
-                            <div class="avatar mx-auto">
-                                <img th:src="@{~/image/home/icone/Casolaro.jpg}"
-                                     class="rounded-circle z-depth-1"
-                                     alt="Sample avatar">
-                            </div>
-                            <h5 class="font-weight-bold mt-4 mb-3">Alessio Casolaro</h5>
-                            <p class="text-uppercase blue-text"><strong>Developer</strong></p>
-                            <!-- Github -->
-                            <a href="https://github.com/BearGrillz99" class="p-2 fa-lg ins-ic">
-                                <i class="fa fa-github fa-lg"> </i>
-                            </a>
-                        </div>
-                        <!-- Grid column -->
 
                         <!-- Grid column -->
                         <div class="col-lg-3 col-md-6 p-1">
@@ -287,6 +272,22 @@
                             </a>
                         </div>
                         <!-- Grid column -->
+
+                        <!-- Grid column -->
+                        <div class="col-lg-3 col-md-6 p-1">
+                            <div class="avatar mx-auto">
+                                <img th:src="@{~/image/home/icone/Casolaro.jpg}"
+                                     class="rounded-circle z-depth-1"
+                                     alt="Sample avatar">
+                            </div>
+                            <h5 class="font-weight-bold mt-4 mb-3">Alessio Casolaro</h5>
+                            <p class="text-uppercase blue-text"><strong>Developer</strong></p>
+                            <!-- Github -->
+                            <a href="https://github.com/BearGrillz99" class="p-2 fa-lg ins-ic">
+                                <i class="fa fa-github fa-lg"> </i>
+                            </a>
+                        </div>
+                        <!-- Grid column -->
                     </div>
                     <!-- Grid row -->
 
@@ -294,13 +295,14 @@
                 <!-- Section: Team -->
             </div>
         </div>
-        <footer class="bg-light text-center text-lg-start">
-            <!-- Copyright -->
-            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-                © 2020 Copyright:Biblionet.com
-            </div>
-            <!-- Copyright -->
-        </footer>
     </div>
+    <footer class="bg-light text-center text-lg-start">
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+            © 2020 Copyright:Biblionet.com
+        </div>
+        <!-- Copyright -->
+    </footer>
+</div>
 </body>
 </html>
