--- a/src/main/resources/templates/club-del-libro/visualizza-eventi.html
+++ b/src/main/resources/templates/club-del-libro/visualizza-eventi.html
@@ -30,11 +30,23 @@
                     Modifica
                 </a>
             </td>
-            <td class="align-middle" th:if="${session.loggedUser != null && session.loggedUser.tipo == 'Lettore' && session.loggedUser.eventi.contains(evento)}">
-                <a th:href="@{'/club-del-libro/'+ ${evento.club.idClub} + '/eventi/' + ${evento.idEvento} + '/abbandono '}" class="btn btn-main">Abbandona</a>
-            </td>
-            <td class="align-middle" th:if="${session.loggedUser != null && session.loggedUser.tipo == 'Lettore' && !session.loggedUser.eventi.contains(evento)}">
+            <td class="align-middle" th:if="${session.loggedUser != null && session.loggedUser.tipo == 'Lettore'}">
                 <a th:href="@{'/club-del-libro/'+ ${evento.club.idClub} + '/eventi/' + ${evento.idEvento} + '/iscrizione'}" class="btn btn-main">Iscriviti</a>
+            </td>
+        </tr>
+        <tr th:each="evento : ${mieiEventi}">
+            <td class="align-middle" th:text="${evento.nomeEvento}"> </td>
+            <td class="align-middle" th:text="${evento.descrizione}"> </td>
+            <td class="align-middle" th:text="${#temporals.format(evento.dataOra,'dd/MM/yyyy')}"> </td>
+            <td class="align-middle" th:text="${#temporals.format(evento.dataOra,'HH:mm')}"> </td>
+            <td class="align-middle" th:text="${evento.libro} ? ${evento.libro.titolo} : 'N/A'"> </td>
+            <td class="align-middle" th:if="${session.loggedUser != null && session.loggedUser.tipo == 'Esperto' && evento.club.esperto.email == session.loggedUser.email}">
+                <a class="btn btn-main" th:href="@{'/club-del-libro/' + ${evento.club.idClub} + '/eventi/' + ${evento.idEvento} + '/modifica'}">
+                    Modifica
+                </a>
+            </td>
+            <td class="align-middle" th:if="${session.loggedUser != null && session.loggedUser.tipo == 'Lettore'}">
+                <a th:href="@{'/club-del-libro/'+ ${evento.club.idClub} + '/eventi/' + ${evento.idEvento} + '/abbandono '}" class="btn btn-main">Abbandona</a>
             </td>
         </tr>
         <tfoot th:if="${session.loggedUser != null && session.loggedUser.tipo == 'Esperto' && club.esperto.email == session.loggedUser.email}">
