Implementazione visualizzazione singola biblioteca
View, Checkstyle

--- a/src/main/resources/templates/biblioteca/visualizza-lista-biblioteche.html
+++ b/src/main/resources/templates/biblioteca/visualizza-lista-biblioteche.html
@@ -43,11 +43,13 @@
                 <th th:text="${biblioteca.citta}" scope="row"></th>
                 <th th:text="${biblioteca.via}" scope="row"></th>
                 <td>
+                    <form method="get" th:action="@{'/biblioteca/' + ${biblioteca.email}}">
                     <div>
                         <button type="submit" style="border:none;width: 80%;background-color:white">
                             <i class="fa fa-search" style="color:#b20909"></i>
                         </button>
                     </div>
+                    </form>
                 </td>
             </tr>
         </table>
