--- a/src/main/resources/templates/area-utente/visualizza-biblioteca.html
+++ b/src/main/resources/templates/area-utente/visualizza-biblioteca.html
@@ -27,10 +27,10 @@
                                             <a class="btn btn-main" href="/modifica-dati" type="button">Modifica Dati Account</a>
                                         </div>
                                         <div class="mb-3">
-                                            <a class="btn btn-main" type="button">Visualizza Lista Tickets</a>
+                                            <a class="btn btn-main" href="/prenotazione-libri/visualizza-richieste" type="button">Visualizza Lista Tickets</a>
                                         </div>
                                         <div class="mb-3">
-                                            <a class="btn btn-main" type="button">Visualizza Libri Posseduti</a>
+                                            <a class="btn btn-main" href="/prenotazione-libri" type="button">Visualizza Libri Posseduti</a>
                                         </div>
                                     </div>
                             </div>
