--- a/src/main/resources/templates/area-utente/visualizza-esperto.html
+++ b/src/main/resources/templates/area-utente/visualizza-esperto.html
@@ -28,10 +28,10 @@
                                         <a class="btn btn-main" href="/modifica-dati" type="button">Modifica Dati Account</a>
                                     </div>
                                     <div class="mb-3">
-                                        <a class="btn btn-main" type="button">Gestione Generi</a>
+                                        <a class="btn btn-main" href="/preferenze-di-lettura/generi" type="button">Gestione Generi</a>
                                     </div>
                                     <div class="mb-3">
-                                        <a class="btn btn-main" href="/visualizza-clubs-personali-esperto" type="button">Visualizza Clubs</a>
+                                        <a class="btn btn-main" href="/area-utente/visualizza-clubs-personali-esperto" type="button">Visualizza Clubs</a>
                                     </div>
                                 </div>
                             </div>
