--- a/src/main/resources/templates/area-utente/visualizza-lettore.html
+++ b/src/main/resources/templates/area-utente/visualizza-lettore.html
@@ -29,19 +29,19 @@
                                         <a class="btn btn-main" href="/modifica-dati" type="button">Modifica Dati Account</a>
                                     </div>
                                     <div class="mb-3">
-                                        <a class="btn btn-main" type="button">Visualizza Tickets</a>
+                                        <a class="btn btn-main" href="/prenotazione-libri/visualizza-prenotazioni" type="button">Visualizza Tickets</a>
                                     </div>
                                     <div class="mb-3">
-                                        <a class="btn btn-main" type="button">Questionario di supporto</a>
+                                        <a class="btn btn-main"  type="button">Questionario di supporto</a>
                                     </div>
                                     <div class="mb-3">
                                         <a class="btn btn-main" href = "/comunicazione-esperto/visualizza-esperti-genere" type="button">Visualizza Esperti per te</a>
                                     </div>
                                     <div class="mb-3">
-                                        <a class="btn btn-main" type="button">Gestione Generi</a>
+                                        <a class="btn btn-main" href="/preferenze-di-lettura/generi" type="button">Gestione Generi</a>
                                     </div>
                                     <div class="mb-3">
-                                        <a class="btn btn-main" href="/visualizza-clubs-personali-lettore" type="button">Visualizza Clubs</a>
+                                        <a class="btn btn-main" href="/area-utente/visualizza-clubs-personali-lettore" type="button">Visualizza Clubs</a>
                                     </div>
                                 </div>
                             </div>
