--- a/src/main/resources/templates/club-del-libro/visualizza-clubs.html
+++ b/src/main/resources/templates/club-del-libro/visualizza-clubs.html
@@ -56,7 +56,7 @@
                     <tfoot th:if="${session.loggedUser != null && session.loggedUser.tipo == 'Esperto'}">
                         <th th:colspan="7" style="text-align: center;">
                             <a style="width: 100%; height: 100%;" class="btn btn-main" th:href="@{/club-del-libro/crea}">
-                                Crea club del Libro
+                                Crea Club Del Libro
                             </a>
                         </th>
                     </tfoot>
