--- a/src/main/resources/templates/registrazione/registrazione_esperto.html
+++ b/src/main/resources/templates/registrazione/registrazione_esperto.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="../../style/registrazione.css">
     <link rel="stylesheet" type="text/css" href="../../style/style.css">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Registrazione Esperto</title>
 </head>
 <body>
 <div layout:fragment="pagina" class="container">
