--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -140,13 +140,11 @@
                         cercare le biblioteche più vicine ad esso
                         e di visionare in modo semplice e veloce la lista dei libri disponibili in esse.</p>
 
-                    <!-- Grid row -->
-                    <div class="row">
-
+                    <div class="row justify-content-center">
                         <!-- Grid column -->
                         <div class="col-lg-3 col-md-6 mb-lg-0 mb-5 p-1">
                             <div class="avatar mx-auto">
-                                <img th:src="@{~/image/home/icone/Lambiase.jpg}" class="rounded-circle z-depth-1"
+                                <img th:src="@{~/image/home/icone/Lambiase.png}" class="rounded-circle z-depth-1"
                                      alt="Sample avatar">
                             </div>
                             <h5 class="font-weight-bold mt-4 mb-3">Stefano Lambiase</h5>
@@ -158,6 +156,13 @@
 
                         </div>
                         <!-- Grid column -->
+
+                    </div>
+
+                    <!-- Grid row -->
+                    <div class="row">
+
+
 
                         <!-- Grid column -->
                         <div class="col-lg-3 col-md-6 mb-lg-0 mb-5 p-1">
@@ -239,6 +244,21 @@
                         </div>
                         <!-- Grid column -->
 
+                        <!-- Grid column -->
+                        <div class="col-lg-3 col-md-6 p-1">
+                            <div class="avatar mx-auto">
+                                <img th:src="@{~/image/home/icone/Casolaro.jpg}"
+                                     class="rounded-circle z-depth-1"
+                                     alt="Sample avatar">
+                            </div>
+                            <h5 class="font-weight-bold mt-4 mb-3">Alessio Casolaro</h5>
+                            <p class="text-uppercase blue-text"><strong>Developer</strong></p>
+                            <!-- Github -->
+                            <a href="https://github.com/BearGrillz99" class="p-2 fa-lg ins-ic">
+                                <i class="fa fa-github fa-lg"> </i>
+                            </a>
+                        </div>
+                        <!-- Grid column -->
 
                         <!-- Grid column -->
                         <div class="col-lg-3 col-md-6 p-1">
@@ -268,22 +288,6 @@
                             <!-- Github -->
 
                             <a href="https://github.com/Nicola-Pagliara" class="p-2 fa-lg ins-ic">
-                                <i class="fa fa-github fa-lg"> </i>
-                            </a>
-                        </div>
-                        <!-- Grid column -->
-
-                        <!-- Grid column -->
-                        <div class="col-lg-3 col-md-6 p-1">
-                            <div class="avatar mx-auto">
-                                <img th:src="@{~/image/home/icone/Casolaro.jpg}"
-                                     class="rounded-circle z-depth-1"
-                                     alt="Sample avatar">
-                            </div>
-                            <h5 class="font-weight-bold mt-4 mb-3">Alessio Casolaro</h5>
-                            <p class="text-uppercase blue-text"><strong>Developer</strong></p>
-                            <!-- Github -->
-                            <a href="https://github.com/BearGrillz99" class="p-2 fa-lg ins-ic">
                                 <i class="fa fa-github fa-lg"> </i>
                             </a>
                         </div>
