--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -167,7 +167,7 @@
                         <!-- Grid column -->
                         <div class="col-lg-3 col-md-6 mb-lg-0 mb-5 p-1">
                             <div class="avatar mx-auto">
-                                <img th:src="@{~/image/home/icone/Voria.jpg}"
+                                <img th:src="@{~/image/home/icone/Voria.png}"
                                      class="rounded-circle z-depth-1"
                                      alt="Sample avatar">
                             </div>
@@ -183,7 +183,7 @@
                         <!-- Grid column -->
                         <div class="col-lg-3 col-md-6 mb-md-0 mb-5 p-1">
                             <div class="avatar mx-auto">
-                                <img th:src="@{~/image/home/icone/Pentangelo.jpg}"
+                                <img th:src="@{~/image/home/icone/Pentangelo.png}"
                                      class="rounded-circle z-depth-1"
                                      alt="Sample avatar">
                             </div>
@@ -215,7 +215,7 @@
                         <!-- Grid column -->
                         <div class="col-lg-3 col-md-6 p-1">
                             <div class="avatar mx-auto">
-                                <img th:src="@{~/image/home/icone/Maiorino.jpg}"
+                                <img th:src="@{~/image/home/icone/Maiorino.png}"
                                      class="rounded-circle z-depth-1"
                                      alt="Sample avatar">
                             </div>
@@ -231,7 +231,7 @@
                         <!-- Grid column -->
                         <div class="col-lg-3 col-md-6 p-1">
                             <div class="avatar mx-auto">
-                                <img th:src="@{~/image/home/icone/Triggiani.jpg}"
+                                <img th:src="@{~/image/home/icone/Triggiani.png}"
                                      class="rounded-circle z-depth-1"
                                      alt="Sample avatar">
                             </div>
@@ -247,7 +247,7 @@
                         <!-- Grid column -->
                         <div class="col-lg-3 col-md-6 p-1">
                             <div class="avatar mx-auto">
-                                <img th:src="@{~/image/home/icone/Casolaro.jpg}"
+                                <img th:src="@{~/image/home/icone/Casolaro.png}"
                                      class="rounded-circle z-depth-1"
                                      alt="Sample avatar">
                             </div>
@@ -263,7 +263,7 @@
                         <!-- Grid column -->
                         <div class="col-lg-3 col-md-6 p-1">
                             <div class="avatar mx-auto">
-                                <img th:src="@{~/image/home/icone/Topo.jpg}"
+                                <img th:src="@{~/image/home/icone/Topo.png}"
                                      class="rounded-circle z-depth-1"
                                      alt="Sample avatar">
                             </div>
@@ -279,7 +279,7 @@
                         <!-- Grid column -->
                         <div class="col-lg-3 col-md-6 p-1">
                             <div class="avatar mx-auto">
-                                <img th:src="@{~/image/home/icone/Pagliara.jpg}"
+                                <img th:src="@{~/image/home/icone/Pagliara.png}"
                                      class="rounded-circle z-depth-1"
                                      alt="Sample avatar">
                             </div>
