Fix colore ovunque

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/common}">
-<body layout:fragment="pagina">
+<body layout:fragment="pagina" class="pagina">
 <!-- Normalmente non dovrebbe esserci bisogno di riscrivere questo fragment. È qui 
      per permettere la sostituzione del contenuto della navbar. -->
     <div layout:insert="~{layout/includes/navbar :: navbar}"></div>
