Implementazione Error Handler Alternativo a quello implementato gia.

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -3,12 +3,12 @@
       layout:decorate="~{layout/common}">
 <head>
     <meta charset="UTF-8">
-    <title>400</title>
+    <title>UH OH! You're Lost</title>
 </head>
 <body>
 <div layout:fragment="pagina">
     <div class="justify-content-center">
-        <a th:href="@{/}"> <img  th:src="@{~/image/error/400.png}" style="width: 90%;"> </a>
+        <a th:href="@{/}"> <img  th:src="@{~/image/error/error.png}" style="width: 90%;"> </a>
     </div>
 </div>
 </body>
