--- a/src/main/resources/templates/club-del-libro/visualizza-clubs.html
+++ b/src/main/resources/templates/club-del-libro/visualizza-clubs.html
@@ -49,6 +49,7 @@
                         <th scope="col" class="align-content-center">Generi</th>
                         <th scope="col" class="align-content-center">Esperto</th>
                         <th scope="col" class="align-content-center">Iscritti</th>
+                        <th scope="col" class="align-content-center">Visualizza</th>
                         <th scope="col" class="align-content-center" th:if="${session.loggedUser != null && session.loggedUser.tipo == 'Esperto'}">Azioni</th>
                     </thead>
                     <tbody id="tabellaClubs">
