--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -7,7 +7,7 @@
 }
 
 .pagina {
-    background-color: #f2f2f2;
+    background-color: #f5f5f5;
 }
 
 .contenuto-pagina {
@@ -63,4 +63,20 @@ a:active, a:hover {
 
 .tt-hint {
     display: none;
+}
+
+.grey-bg {
+    background-color: #f5f5f5;
+}
+
+.fa-github {
+    color: #073763;
+}
+
+.fa-github:hover {
+    color:#b20909;
+}
+
+.member-circle {
+    margin-top: 4%;
 }
