--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -103,7 +103,27 @@
                             ed interagire con loro per farti consigliare i
                             libri più adatti a te.
                         </p>
-                        <a href="/visualizza-esperti/" class="btn btn-lg active red-btn" role="button" aria-pressed="true">Esperti</a>
+                        <div th:with="cond1 = ${session.loggedUser!=null}" style="width:100%; align-items: center;">
+                            <div th:if="${cond1}" style="width:90%">
+                                <div th:with="cond2 = ${session.loggedUser.tipo.equals('Lettore')}" style="width:100%">
+                                    <div th:if="${cond2}" style="width:100%">
+                                        <a href="/comunicazione-esperto/visualizza-esperti-genere" class="btn btn-lg active red-btn" role="button" aria-pressed="true" style="margin-left:5%;">
+                                            Esperti
+                                        </a>
+                                    </div>
+                                    <div th:unless="${cond2}" style="width:100%">
+                                        <a href="/autenticazione" class="btn btn-lg active red-btn" role="button" aria-pressed="true" style="margin-left:5%;">
+                                            Effettua l'accesso
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div th:unless="${cond1}" style="width:90%">
+                                <a href="/autenticazione" class="btn btn-lg active red-btn" role="button" aria-pressed="true" style="margin-left:5%;">
+                                    Effettua l'accesso
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -150,7 +170,7 @@
                             <h5 class="font-weight-bold mt-4 mb-3">Stefano Lambiase</h5>
                             <p class="text-uppercase blue-text"><strong>Project Manager</strong></p>
                             <!-- Github -->
-                            <a href="https://github.com/StefanoLambiase" class="p-2 fa-lg ins-ic">
+                            <a href="https://github.com/StefanoLambiase" class="p-2 fa-lg ins-ic" target="_blank" rel="noopener noreferrer">
                                 <i class="fa fa-github fa-lg"> </i>
                             </a>
 
@@ -165,7 +185,7 @@
 
 
                         <!-- Grid column -->
-                        <div class="col-lg-3 col-md-6 mb-lg-0 mb-5 p-1">
+                        <div class="col-lg-3 col-md-6 mb-lg-0 mb-5 p-1 member-circle">
                             <div class="avatar mx-auto">
                                 <img th:src="@{~/image/home/icone/Voria.png}"
                                      class="rounded-circle z-depth-1"
@@ -174,14 +194,14 @@
                             <h5 class="font-weight-bold mt-4 mb-3">Gianmario Voria</h5>
                             <p class="text-uppercase blue-text"><strong>Developer</strong></p>
                             <!-- Github -->
-                            <a href="https://github.com/yabokk" class="p-2 fa-lg ins-ic">
+                            <a href="https://github.com/yabokk" class="p-2 fa-lg ins-ic" target="_blank" rel="noopener noreferrer">
                                 <i class="fa fa-github fa-lg"> </i>
                             </a>
                         </div>
                         <!-- Grid column -->
 
                         <!-- Grid column -->
-                        <div class="col-lg-3 col-md-6 mb-md-0 mb-5 p-1">
+                        <div class="col-lg-3 col-md-6 mb-md-0 mb-5 p-1 member-circle">
                             <div class="avatar mx-auto">
                                 <img th:src="@{~/image/home/icone/Pentangelo.png}"
                                      class="rounded-circle z-depth-1"
@@ -190,14 +210,14 @@
                             <h5 class="font-weight-bold mt-4 mb-3">Viviana Pentangelo</h5>
                             <p class="text-uppercase blue-text"><strong>Developer</strong></p>
                             <!-- Github -->
-                            <a href="https://github.com/vipenti" class="p-2 fa-lg ins-ic">
+                            <a href="https://github.com/vipenti" class="p-2 fa-lg ins-ic" target="_blank" rel="noopener noreferrer">
                                 <i class="fa fa-github fa-lg"> </i>
                             </a>
                         </div>
                         <!-- Grid column -->
 
                         <!-- Grid column -->
-                        <div class="col-lg-3 col-md-6 p-1">
+                        <div class="col-lg-3 col-md-6 p-1 member-circle">
                             <div class="avatar mx-auto">
                                 <img th:src="@{~/image/home/icone/DellaPorta.png}"
                                      class="rounded-circle z-depth-1"
@@ -206,14 +226,14 @@
                             <h5 class="font-weight-bold mt-4 mb-3">Antonio Della Porta</h5>
                             <p class="text-uppercase blue-text"><strong>Developer</strong></p>
                             <!-- Github -->
-                            <a href="https://github.com/atdepo" class="p-2 fa-lg ins-ic">
+                            <a href="https://github.com/atdepo" class="p-2 fa-lg ins-ic" target="_blank" rel="noopener noreferrer">
                                 <i class="fa fa-github fa-lg"> </i>
                             </a>
                         </div>
                         <!-- Grid column -->
 
                         <!-- Grid column -->
-                        <div class="col-lg-3 col-md-6 p-1">
+                        <div class="col-lg-3 col-md-6 p-1 member-circle">
                             <div class="avatar mx-auto">
                                 <img th:src="@{~/image/home/icone/Maiorino.png}"
                                      class="rounded-circle z-depth-1"
@@ -222,14 +242,14 @@
                             <h5 class="font-weight-bold mt-4 mb-3">Ciro Maiorino</h5>
                             <p class="text-uppercase blue-text"><strong>Developer</strong></p>
                             <!-- Github -->
-                            <a href="https://github.com/Tekhorror" class="p-2 fa-lg ins-ic">
+                            <a href="https://github.com/Tekhorror" class="p-2 fa-lg ins-ic" target="_blank" rel="noopener noreferrer">
                                 <i class="fa fa-github fa-lg"> </i>
                             </a>
                         </div>
                         <!-- Grid column -->
 
                         <!-- Grid column -->
-                        <div class="col-lg-3 col-md-6 p-1">
+                        <div class="col-lg-3 col-md-6 p-1 member-circle">
                             <div class="avatar mx-auto">
                                 <img th:src="@{~/image/home/icone/Triggiani.png}"
                                      class="rounded-circle z-depth-1"
@@ -238,14 +258,14 @@
                             <h5 class="font-weight-bold mt-4 mb-3">Giulio Triggiani</h5>
                             <p class="text-uppercase blue-text"><strong>Developer</strong></p>
                             <!-- Github -->
-                            <a href="https://github.com/rayleighRe1" class="p-2 fa-lg ins-ic">
+                            <a href="https://github.com/rayleighRe1" class="p-2 fa-lg ins-ic" target="_blank" rel="noopener noreferrer">
                                 <i class="fa fa-github fa-lg"> </i>
                             </a>
                         </div>
                         <!-- Grid column -->
 
                         <!-- Grid column -->
-                        <div class="col-lg-3 col-md-6 p-1">
+                        <div class="col-lg-3 col-md-6 p-1 member-circle">
                             <div class="avatar mx-auto">
                                 <img th:src="@{~/image/home/icone/Casolaro.png}"
                                      class="rounded-circle z-depth-1"
@@ -254,14 +274,14 @@
                             <h5 class="font-weight-bold mt-4 mb-3">Alessio Casolaro</h5>
                             <p class="text-uppercase blue-text"><strong>Developer</strong></p>
                             <!-- Github -->
-                            <a href="https://github.com/BearGrillz99" class="p-2 fa-lg ins-ic">
+                            <a href="https://github.com/BearGrillz99" class="p-2 fa-lg ins-ic" target="_blank" rel="noopener noreferrer">
                                 <i class="fa fa-github fa-lg"> </i>
                             </a>
                         </div>
                         <!-- Grid column -->
 
                         <!-- Grid column -->
-                        <div class="col-lg-3 col-md-6 p-1">
+                        <div class="col-lg-3 col-md-6 p-1 member-circle">
                             <div class="avatar mx-auto">
                                 <img th:src="@{~/image/home/icone/Topo.png}"
                                      class="rounded-circle z-depth-1"
@@ -270,14 +290,14 @@
                             <h5 class="font-weight-bold mt-4 mb-3">Luca Topo</h5>
                             <p class="text-uppercase blue-text"><strong>Developer</strong></p>
                             <!-- Github -->
-                            <a href="https://github.com/Zekromaster" class="p-2 fa-lg ins-ic">
+                            <a href="https://github.com/Zekromaster" class="p-2 fa-lg ins-ic" target="_blank" rel="noopener noreferrer">
                                 <i class="fa fa-github fa-lg"> </i>
                             </a>
                         </div>
                         <!-- Grid column -->
 
                         <!-- Grid column -->
-                        <div class="col-lg-3 col-md-6 p-1">
+                        <div class="col-lg-3 col-md-6 p-1 member-circle">
                             <div class="avatar mx-auto">
                                 <img th:src="@{~/image/home/icone/Pagliara.png}"
                                      class="rounded-circle z-depth-1"
@@ -287,7 +307,7 @@
                             <p class="text-uppercase blue-text"><strong>Developer</strong></p>
                             <!-- Github -->
 
-                            <a href="https://github.com/Nicola-Pagliara" class="p-2 fa-lg ins-ic">
+                            <a href="https://github.com/Nicola-Pagliara" class="p-2 fa-lg ins-ic" target="_blank" rel="noopener noreferrer">
                                 <i class="fa fa-github fa-lg"> </i>
                             </a>
                         </div>
