--- a/src/main/resources/templates/club-del-libro/visualizza-singolo-club.html
+++ b/src/main/resources/templates/club-del-libro/visualizza-singolo-club.html
@@ -115,6 +115,7 @@
                     <th scope="col">Data</th>
                     <th scope="col">Ora</th>
                     <th scope="col">Libro trattato</th>
+                    <th scope="col">Azioni</th>
                     </thead>
                     <tr th:each="evento : ${club.eventi}">
                         <td th:text="${evento.nomeEvento}"></td>
@@ -122,7 +123,19 @@
                         <td th:text="${#temporals.format(evento.dataOra,'dd/MM/yyyy')}"></td>
                         <td th:text="${#temporals.format(evento.dataOra,'HH:mm')}"></td>
                         <td th:text="${evento.libro} ? ${evento.libro.titolo} : 'NA'"></td>
+                        <td class="align-middle" th:if="${session.loggedUser != null && session.loggedUser.tipo == 'Esperto' && evento.club.esperto.email == session.loggedUser.email}">
+                            <a class="btn btn-main" th:href="@{'/club-del-libro/' + ${evento.club.idClub} + '/eventi/' + ${evento.idEvento} + '/modifica'}">
+                                Modifica
+                            </a>
+                        </td>
                     </tr>
+                    <tfoot th:if="${session.loggedUser != null && session.loggedUser.tipo == 'Esperto' && club.esperto.email == session.loggedUser.email}">
+                        <th th:colspan="7" style="text-align: center;">
+                            <a style="width: 100%; height: 100%;" class="btn btn-main" th:href="@{'/club-del-libro/' + ${club.idClub} + '/eventi/crea'}">
+                                Crea evento
+                            </a>
+                        </th>
+                    </tfoot>
                 </table>
 
                 <div th:if="${session.loggedUser != null && session.loggedUser.tipo == 'Lettore' && club.lettori.contains(session.loggedUser)}">
