--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layout/common}">
+      layout:decorate="~{layout/layout}">
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
@@ -8,49 +8,11 @@
     <link rel="stylesheet" th:href="@{~/style/home.css}"/>
 </head>
 <body>
-<div layout:fragment="pagina">
-    <nav class="navbar navbar-expand-lg justify-content-between " id="navbar-principale">
 
-        <div>
-            <div class="navbar-brand">
-                <a th:href="@{/}"> <img class="w-30" th:src="@{~/image/logo/Solo_libro.png}" style="width: 30%;"> </a>
-            </div>
-        </div>
-
-        <div class="mx-auto">
-            <div>
-                <img th:src="@{~/image/logo/Solo_testo.png}" style="width: 30%;">
-            </div>
-        </div>
-
-
-        <div class="d-flex ml-auto">
-            <div>
-
-
-                <div class="dropdown" th:if="${session.loggedUser != null && session.loggedUser.email != null}">
-                    <button class="btn btn-main dropdown-toggle" type="button" id="dropdownMenuButton"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                        Area Utente
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <li><a class="dropdown-item" type="submit" th:href="@{/area-utente}">Area Utente</a></li>
-                        <li><a class="dropdown-item" href="/autenticazione/logout">Logout</a></li>
-                    </ul>
-                </div>
-
-                <div th:unless="${session.loggedUser != null && session.loggedUser.email != null}">
-                    <a class="btn btn-main" type="submit" th:href="@{/registrazione/}">Registrati</a>
-                    <a class="btn btn-main" type="submit" th:href="@{/autenticazione}">Accedi</a>
-                </div>
-
-            </div>
-        </div>
-
-    </nav>
+<div layout:fragment="contenuto-pagina">
 
     <div class="container">
-        <div class="row" style="margin-top: 6%">
+        <div class="row" style="margin-top: 10%">
 
             <div class="col flip_container">
                 <div class="flip">
@@ -61,12 +23,13 @@
                     </div>
                     <div class="flip_back w-100 flipped-card-text">
                         <p>
-                                Premi sul bottone in basso per
-                                visualizzare i club del libro
-                                ed unirti a milioni di lettori che condividono
-                                i tuoi stessi interessi.
+                            Premi sul bottone in basso per
+                            visualizzare i club del libro
+                            ed unirti a milioni di lettori che condividono
+                            i tuoi stessi interessi.
                         </p>
-                        <a href="/club-del-libro/" class="btn btn-lg active red-btn" role="button" aria-pressed="true">Club del Libro</a>
+                        <a href="/club-del-libro/" class="btn btn-lg active red-btn" role="button" aria-pressed="true">Club
+                            del Libro</a>
                     </div>
                 </div>
             </div>
@@ -84,7 +47,8 @@
                             per visualizzare le biblioteche
                             che più ti possono interessare.
                         </p>
-                        <a href="/biblioteca/visualizza-biblioteche/" class="btn btn-lg active red-btn" role="button" aria-pressed="true">Biblioteche</a>
+                        <a href="/biblioteca/visualizza-biblioteche/" class="btn btn-lg active red-btn" role="button"
+                           aria-pressed="true">Biblioteche</a>
                     </div>
                 </div>
             </div>
@@ -107,19 +71,23 @@
                             <div th:if="${cond1}" style="width:90%">
                                 <div th:with="cond2 = ${session.loggedUser.tipo.equals('Lettore')}" style="width:100%">
                                     <div th:if="${cond2}" style="width:100%">
-                                        <a href="/comunicazione-esperto/visualizza-esperti-genere" class="btn btn-lg active red-btn" role="button" aria-pressed="true" style="margin-left:5%;">
+                                        <a href="/comunicazione-esperto/visualizza-esperti-genere"
+                                           class="btn btn-lg active red-btn" role="button" aria-pressed="true"
+                                           style="margin-left:5%;">
                                             Esperti
                                         </a>
                                     </div>
                                     <div th:unless="${cond2}" style="width:100%">
-                                        <a href="/autenticazione" class="btn btn-lg active red-btn" role="button" aria-pressed="true" style="margin-left:5%;">
+                                        <a href="/autenticazione" class="btn btn-lg active red-btn" role="button"
+                                           aria-pressed="true" style="margin-left:5%;">
                                             Effettua l'accesso
                                         </a>
                                     </div>
                                 </div>
                             </div>
                             <div th:unless="${cond1}" style="width:90%">
-                                <a href="/autenticazione" class="btn btn-lg active red-btn" role="button" aria-pressed="true" style="margin-left:5%;">
+                                <a href="/autenticazione" class="btn btn-lg active red-btn" role="button"
+                                   aria-pressed="true" style="margin-left:5%;">
                                     Effettua l'accesso
                                 </a>
                             </div>
@@ -142,7 +110,8 @@
                             prenotare i libri che desideri
                             direttamente da casa tua.
                         </p>
-                        <a href="/prenotazione-libri/" class="btn btn-lg active red-btn" role="button" aria-pressed="true">Prenotazione libri</a>
+                        <a href="/prenotazione-libri/" class="btn btn-lg active red-btn" role="button"
+                           aria-pressed="true">Prenotazione libri</a>
                     </div>
                 </div>
             </div>
@@ -170,7 +139,8 @@
                             <h5 class="font-weight-bold mt-4 mb-3">Stefano Lambiase</h5>
                             <p class="text-uppercase blue-text"><strong>Project Manager</strong></p>
                             <!-- Github -->
-                            <a href="https://github.com/StefanoLambiase" class="p-2 fa-lg ins-ic" target="_blank" rel="noopener noreferrer">
+                            <a href="https://github.com/StefanoLambiase" class="p-2 fa-lg ins-ic" target="_blank"
+                               rel="noopener noreferrer">
                                 <i class="fa fa-github fa-lg"> </i>
                             </a>
 
@@ -183,7 +153,6 @@
                     <div class="row">
 
 
-
                         <!-- Grid column -->
                         <div class="col-lg-3 col-md-6 mb-lg-0 mb-5 p-1 member-circle">
                             <div class="avatar mx-auto">
@@ -194,7 +163,8 @@
                             <h5 class="font-weight-bold mt-4 mb-3">Gianmario Voria</h5>
                             <p class="text-uppercase blue-text"><strong>Developer</strong></p>
                             <!-- Github -->
-                            <a href="https://github.com/yabokk" class="p-2 fa-lg ins-ic" target="_blank" rel="noopener noreferrer">
+                            <a href="https://github.com/yabokk" class="p-2 fa-lg ins-ic" target="_blank"
+                               rel="noopener noreferrer">
                                 <i class="fa fa-github fa-lg"> </i>
                             </a>
                         </div>
@@ -210,7 +180,8 @@
                             <h5 class="font-weight-bold mt-4 mb-3">Viviana Pentangelo</h5>
                             <p class="text-uppercase blue-text"><strong>Developer</strong></p>
                             <!-- Github -->
-                            <a href="https://github.com/vipenti" class="p-2 fa-lg ins-ic" target="_blank" rel="noopener noreferrer">
+                            <a href="https://github.com/vipenti" class="p-2 fa-lg ins-ic" target="_blank"
+                               rel="noopener noreferrer">
                                 <i class="fa fa-github fa-lg"> </i>
                             </a>
                         </div>
@@ -226,7 +197,8 @@
                             <h5 class="font-weight-bold mt-4 mb-3">Antonio Della Porta</h5>
                             <p class="text-uppercase blue-text"><strong>Developer</strong></p>
                             <!-- Github -->
-                            <a href="https://github.com/atdepo" class="p-2 fa-lg ins-ic" target="_blank" rel="noopener noreferrer">
+                            <a href="https://github.com/atdepo" class="p-2 fa-lg ins-ic" target="_blank"
+                               rel="noopener noreferrer">
                                 <i class="fa fa-github fa-lg"> </i>
                             </a>
                         </div>
@@ -242,7 +214,8 @@
                             <h5 class="font-weight-bold mt-4 mb-3">Ciro Maiorino</h5>
                             <p class="text-uppercase blue-text"><strong>Developer</strong></p>
                             <!-- Github -->
-                            <a href="https://github.com/Tekhorror" class="p-2 fa-lg ins-ic" target="_blank" rel="noopener noreferrer">
+                            <a href="https://github.com/Tekhorror" class="p-2 fa-lg ins-ic" target="_blank"
+                               rel="noopener noreferrer">
                                 <i class="fa fa-github fa-lg"> </i>
                             </a>
                         </div>
@@ -258,7 +231,8 @@
                             <h5 class="font-weight-bold mt-4 mb-3">Giulio Triggiani</h5>
                             <p class="text-uppercase blue-text"><strong>Developer</strong></p>
                             <!-- Github -->
-                            <a href="https://github.com/rayleighRe1" class="p-2 fa-lg ins-ic" target="_blank" rel="noopener noreferrer">
+                            <a href="https://github.com/rayleighRe1" class="p-2 fa-lg ins-ic" target="_blank"
+                               rel="noopener noreferrer">
                                 <i class="fa fa-github fa-lg"> </i>
                             </a>
                         </div>
@@ -274,7 +248,8 @@
                             <h5 class="font-weight-bold mt-4 mb-3">Alessio Casolaro</h5>
                             <p class="text-uppercase blue-text"><strong>Developer</strong></p>
                             <!-- Github -->
-                            <a href="https://github.com/BearGrillz99" class="p-2 fa-lg ins-ic" target="_blank" rel="noopener noreferrer">
+                            <a href="https://github.com/BearGrillz99" class="p-2 fa-lg ins-ic" target="_blank"
+                               rel="noopener noreferrer">
                                 <i class="fa fa-github fa-lg"> </i>
                             </a>
                         </div>
@@ -290,7 +265,8 @@
                             <h5 class="font-weight-bold mt-4 mb-3">Luca Topo</h5>
                             <p class="text-uppercase blue-text"><strong>Developer</strong></p>
                             <!-- Github -->
-                            <a href="https://github.com/Zekromaster" class="p-2 fa-lg ins-ic" target="_blank" rel="noopener noreferrer">
+                            <a href="https://github.com/Zekromaster" class="p-2 fa-lg ins-ic" target="_blank"
+                               rel="noopener noreferrer">
                                 <i class="fa fa-github fa-lg"> </i>
                             </a>
                         </div>
@@ -307,7 +283,8 @@
                             <p class="text-uppercase blue-text"><strong>Developer</strong></p>
                             <!-- Github -->
 
-                            <a href="https://github.com/Nicola-Pagliara" class="p-2 fa-lg ins-ic" target="_blank" rel="noopener noreferrer">
+                            <a href="https://github.com/Nicola-Pagliara" class="p-2 fa-lg ins-ic" target="_blank"
+                               rel="noopener noreferrer">
                                 <i class="fa fa-github fa-lg"> </i>
                             </a>
                         </div>
@@ -320,7 +297,7 @@
             </div>
         </div>
     </div>
-    <footer class="bg-light text-center text-lg-start">
+    <footer class="bg-light text-center text-lg-start" style="margin-left:-5%; width: 107.656%; bottom:0">
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
             © 2020 Copyright:Biblionet.com
