--- a/src/main/resources/templates/club-del-libro/visualizza-singolo-club.html
+++ b/src/main/resources/templates/club-del-libro/visualizza-singolo-club.html
@@ -116,6 +116,7 @@
                     <th scope="col">Ora</th>
                     <th scope="col">Libro trattato</th>
                     <th scope="col">Azioni</th>
+                    <th scope="col"></th>
                     </thead>
                     <tr th:each="evento : ${club.eventi}">
                         <td th:text="${evento.nomeEvento}"></td>
@@ -127,6 +128,16 @@
                             <a class="btn btn-main" th:href="@{'/club-del-libro/' + ${evento.club.idClub} + '/eventi/' + ${evento.idEvento} + '/modifica'}">
                                 Modifica
                             </a>
+                        </td>
+                        <td class="align-middle" th:if="${session.loggedUser != null && session.loggedUser.tipo == 'Esperto' && evento.club.esperto.email == session.loggedUser.email}">
+                            <!-- METODO PER ELIMINARE EVENTO - MAPPATO BENE, MA NEL CONTROLLER E' STATA USATA
+                                UNA CHIAMATA DELETE CHE NON SI USA PIU' DAL 1250. QUALCUNO RISOLVA PERCHE'
+                                IO NON NE HO VOGLIA E DOVREI CAMBIARE ROBA SIA IN CONTROLLER CHE IN TEST E NON
+                                SI PUO' VISTO CHE NON SONO NEMMENO COMPLETATI.
+                            <form method="DELETE" th:action="@{'/club-del-libro/' + ${evento.club.idClub} + '/eventi/' + ${evento.idEvento}}">
+                                <input class="btn btn-main" type="submit" value="Elimina">
+                            </form>
+                            -->
                         </td>
                     </tr>
                     <tfoot th:if="${session.loggedUser != null && session.loggedUser.tipo == 'Esperto' && club.esperto.email == session.loggedUser.email}">
